@@ -15,4 +15,4 @@ SplashInfo = Edit, visualize and debug ANTLR grammars
 SplashVersion = Version 1.0ea8
 SplashCopyright = (c) 2005-2006 Jean Bovet & Terence Parr
 
-DefaultFont = Courier New
+DefaultFont = Monospaced
