@@ -31,6 +31,8 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 package org.antlr.works.visualization.graphics;
 
+import org.antlr.works.ate.syntax.misc.ATEToken;
+import org.antlr.works.syntax.GrammarSyntaxEngine;
 import org.antlr.works.utils.Localizable;
 import org.antlr.works.visualization.graphics.primitive.GLiteral;
 import org.antlr.works.visualization.graphics.shape.GLink;
@@ -183,18 +185,14 @@ public class GContext {
 
     public Font getBoxFont() {
         if(boxFont == null)
-            boxFont = new Font(Localizable.getLocalizedString(Localizable.DEFAULT_FONT), Font.PLAIN, (int)(4*value_factor));
+            boxFont = new Font(Localizable.getLocalizedString(Localizable.DEFAULT_FONT), Font.BOLD, (int)(4*value_factor));
         return boxFont;
     }
 
     public Font getRuleFont() {
         if(titleFont == null)
-            titleFont = new Font(Localizable.getLocalizedString(Localizable.DEFAULT_FONT), Font.ITALIC, (int)(4*value_factor));
+            titleFont = new Font(Localizable.getLocalizedString(Localizable.DEFAULT_FONT), Font.BOLD, (int)(4*value_factor));
         return titleFont;
-    }
-
-    public float getStringPixelWidth(Font font, String s) {
-        return engine.getStringPixelWidth(font, s);
     }
 
     public static String getBoxWidth(String label) {
@@ -223,6 +221,17 @@ public class GContext {
 
     public void popColor() {
         setColor((Color)colorStack.pop());
+    }
+
+    public Color getColorForLabel(String label) {
+        if(label.charAt(0) == '\'' || label.charAt(0) == '"')
+            return GrammarSyntaxEngine.COLOR_STRING;
+        else {
+            if(ATEToken.isLexerName(label))
+                return GrammarSyntaxEngine.COLOR_LEXER;
+            else
+                return GrammarSyntaxEngine.COLOR_PARSER;
+        }
     }
 
     public void setLineWidth(float width) {
@@ -257,6 +266,15 @@ public class GContext {
             popColor();
         }
         engine.drawRect(x+offsetX, y+offsetY, dx, dy);
+    }
+
+    public void drawRoundRect(float x, float y, float dx, float dy, float arc_dx, float arc_dy, boolean erase) {
+        if(erase) {
+            pushColor(Color.white);
+            fillRect(x, y, dx, dy);
+            popColor();
+        }
+        engine.drawRoundRect(x+offsetX, y+offsetY, dx, dy, arc_dx, arc_dy);
     }
 
     public void drawOval(float x, float y, float dx, float dy, boolean erase) {
